--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-redux": "^9.1.1",
     "react-router-dom": "^6.23.0",
     "react-slick": "^0.30.2",
-    "react-toastify": "^10.0.5"
+    "react-toastify": "^10.0.5",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
