--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.3",
+    "aos": "^2.3.4",
     "axios": "^1.6.8",
     "date-fns": "^3.6.0",
     "react": "^18.2.0",
